@@ -2,7 +2,7 @@
 Theme Name: Leeway
 Theme URI: http://themezee.com/themes/leeway/
 Description: Leeway is a free, responsive theme designed for small magazine websites or blogs. The theme includes two navigation menus, social icons, a fullwidth featured post slideshow and a flexible Magazine Homepage template. All settings are easy to configure in the Customizer.
-Version: 1.1.4
+Version: 1.1.5
 Author: ThemeZee
 Author URI: http://themezee.com
 Tags: two-columns, light, red, custom-background, custom-header, custom-menu, editor-style, featured-image-header, featured-images, flexible-header, custom-colors, full-width-template, sticky-post, threaded-comments, translation-ready, theme-options, fluid-layout, responsive-layout, one-column, left-sidebar, right-sidebar, three-columns, black, blue, silver, white, green, gray
@@ -1053,6 +1053,8 @@ embed, iframe, object, video {
 #social-icons-menu li a[href*="wordpress.org"]:before,
 #social-icons-menu li a[href*="wordpress.com"]:before { content: '\f205'; }
 #social-icons-menu li a[href*="youtube.com"]:before { content: '\f213'; }
+#social-icons-menu li a[href*="newsletter"]:before,
+#social-icons-menu li a[href*="mailto"]:before { content: '\f410'; }
 #social-icons-menu li a[href*="/feed"]:before,
 #social-icons-menu li a[href*="/feed/"]:before,
 #social-icons-menu li a[href*="?feed=rss2"]:before,
